[tool.poetry]
name = "naxos-reconcile"
version = "0.1.0"
description = "A command line tool to help review and reconcile Naxos records"
authors = ["Charlotte Kostelic <charlottekostelic@gmail.com>"]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["naxos_reconcile"]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.2"
click = "^8.1.7"
pymarc = "^5.1.2"
types-requests = "^2.32.0.20240523"
pandas-stubs = "^2.2.2.240514"
bookops-worldcat = "^1.0.1"


[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
naxos = "naxos_reconcile:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
relative_files = true
source = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
